--- a/SoundTouch/build.gradle
+++ b/SoundTouch/build.gradle
@@ -10,15 +10,19 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 30
-        ndk {
-            abiFilters "arm64-v8a","armeabi-v7a"
-        }
-        externalNativeBuild.ndkBuild {
-            arguments "NDK_APPLICATION=jni/Application.mk",
-                    "APP_ALLOW_MISSING_DEPS:=true"
-        }
+        versionCode 1
+        versionName "1.0"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -27,9 +31,9 @@ android {
         jvmTarget = '1.8'
     }
 
-    externalNativeBuild {
-        ndkBuild {
-            path 'jni/Android.mk'
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
 }
