--- a/SoundTouch/build.gradle
+++ b/SoundTouch/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
 }
+group = 'com.github.iDeMonnnnnn'
 
 android {
     compileSdkVersion 30
