--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,6 @@ dependencies {
     implementation 'com.permissionx.guolindev:permissionx:1.4.0'
     implementation project(path: ':FmodSound')
     implementation project(path: ':SoundTouch')
-    implementation project(path: ':SoundCoding')
-
+    //implementation project(path: ':SoundCoding')
+    implementation 'com.github.iDeMonnnnnn.DeMon_Sound:SoundCoding:0.2'
 }
