--- a/FmodSound/build.gradle
+++ b/FmodSound/build.gradle
@@ -4,12 +4,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion androidCompileVersion
 
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 30
+        minSdkVersion androidMinSdkVersion
+        targetSdkVersion androidTargetVersion
     }
 
     externalNativeBuild {
